# structs/requests/stringRequestDTO.go
@@ -1,0 +1,5 @@
+package requests
+
+type ImageUpdateRequest struct {
+	ImagePath string
+}
